--- a/src/components/writing/Carousel.css
+++ b/src/components/writing/Carousel.css
@@ -13,7 +13,7 @@
   justify-content: center;
   border: 1px solid black;
   margin: 50px;
-  background-color: rgb(218, 218, 218);
+  background-color: rgb(222, 220, 220);
 }
 
 .indicators {
@@ -30,6 +30,17 @@
   color: #fff;
 } */
 
-.carousel-container {
-  width: 100%;
+.arrow {
+  position: absolute;
+  top: 50%;
+}
+
+.right {
+  right: 0;
+  margin-right: 5px;
+}
+
+.left {
+  left: 0;
+  margin-left: 5px;
 }
